incomplete app.js

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h2 id="question-text">Question goes here</h2>
                 <div class="quiz-info">
                     <p>
-                        Question <span id="current-question">1</span> of <span>5</span>
+                        Question <span id="current-question">1</span> of <span id="total-questions">5</span>
                     </p>
 
                     <p>
@@ -43,12 +43,13 @@
             <h1>Quiz Results</h1>
             <div class="result-info">
                 <p>You scored <span id="final-score">0</span> out of <span id="max-score">5</span></p>
-                <div id="results-message">Good job!</div>
+                <div id="result-message">Good job!</div>
             </div>
             <button id="restart-btn">Restart Quiz</button>
     
         </div>
 
     </div>
+    
 </body>
 </html>
